--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,9 @@ body {
   padding: 0;
   width: 100vw;
 }
+li {
+  list-style: none;
+}
 .wrapper {
   display: flex; /* Use flexbox for layout */
   height: 100vh; /* Set the height to 100% of viewport height */
@@ -21,4 +24,26 @@ body {
   padding: 20px;
   background-color: #ffffff;
   overflow-y: auto; /* Add vertical scroll if content exceeds height */
+}
+
+.list-bg {
+  background: rgb(249, 250, 255);
+  padding: 10px;
+}
+.list-item {
+  list-style:none;
+  background: white;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 5px;
+  box-shadow: rgb(224, 224, 224) 0px 2px 4px 0px;
+}
+.list-item h4 {
+  font-size: 20px;
+  font-weight: 800;
+  margin: 0;
+}
+.list-item p {
+  color: grey;
+  margin: 5px 0px;
 }
